--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "pinia": "^2.0.16",
     "sass": "^1.62.0",
     "vue": "^3.2.37",
