--- a/tsconfig.config.json
+++ b/tsconfig.config.json
@@ -4,6 +4,18 @@
   "compilerOptions": {
     "composite": true,
     "types": ["node"],
-    "verbatimModuleSyntax": true
-  }
+    "ignoreDeprecations": "5.0",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "allowJs": true,
+    "checkJs": true,
+    "sourceMap": true,
+    "resolveJsonModule": true,
+    // "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "verbatimModuleSyntax": true // заменяем устаревшую опцию на новую
+  },
+
 }
