--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.3.5",
     "pinia": "^2.0.16",
+    "prettier": "^2.8.8",
     "sass": "^1.62.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2"
@@ -19,7 +20,11 @@
     "@types/node": "^16.11.45",
     "@vitejs/plugin-vue": "^3.0.1",
     "@vue/tsconfig": "^0.1.3",
+    "autoprefixer": "^10.4.14",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.23",
+    "prettier-plugin-tailwindcss": "^0.2.8",
+    "tailwindcss": "^3.3.2",
     "typescript": "~4.7.4",
     "vite": "^3.0.1",
     "vue-tsc": "^0.38.8"
